# Detector-Neural_network

./: .env  .gitignore  DMSO.txt  README.md  color_theme.py  ctypes.py  custom_dialog.py  custom_header_table.py  data_and_processing.py  gui.py  gui.ui  gui_logic.py  main.py  multi_check_box.py  parser.py  plot_spectrometer_data.py  pyproject.toml  requirements.txt  res.qrc  res_rc.py  resources.qrc  ruff.toml  setting.py  ui_validators.py  validators.py
color_theme/: dark_style_sheet.qss  light_style_sheet.qss  theme.py
data/example_spectrum/: with_substance.csv  without_substance.csv
detector_neural_network/: app_exception.py  custom_dialog.py  data_and_processing.py  gui.py  gui.ui  gui_logic.py  main.py  multi_check_box.py  plot_spectrometer_data.py  resources_rc.py  setting.py  ui_validators.py
detector_neural_network/color_theme/: dark_style_sheet.qss  light_style_sheet.qss  theme.py
detector_neural_network/data/example_neural_network/: 5_new.joblib  5_no_filter_.joblib
