[project]
name = "detector-neural-network"
version = "1.0.0"
description = "Find spectral lines in recorded data with the help of a neural network"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib",
    "numpy>=1.26.0,<2.1.0",
    "pandas",
    "pyqtgraph",
    "scipy",
    "scikit-learn",
    "PySide6-Essentials",
]

[project.scripts]
run-detector = "detector_neural_network.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"detector_neural_network" = ["*"]
"detector_neural_network.color_theme" = ["*"]