[project]
name = "detector-neural-network"
version = "1.0.0"
description = "Find spectral lines in recorded data with the help of a neural network"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib",
    "numpy",
    "pandas",
    "pyqtgraph",
    "scipy",
    "scikit-learn",
    "PySide6-Essentials",
    "setuptools",
    "python-dotenv",
]

[project.scripts]
run-detector = "detector_neural_network.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["."] } }

[tool.setuptools.package-data]
"detector_neural_network" = ["**/*"]